# fast_log

./: .gitignore  .travis.yml  Cargo.toml  README.md  README_CH.md
.github/workflows/: rust.yml
benches/: log.rs  log_file.rs  log_mmap.rs
example/: Cargo.toml  bench.sh
example/src/: bench_test.rs  bench_test_file.rs  bench_test_file_daily.rs  bench_test_file_rotate.rs  bench_test_file_split.rs  custom_appender.rs  custom_appender_meilisearch.rs  custom_appender_tokio.rs  format_log.rs  format_log_json.rs  main.rs  normal.rs  rotate_log_daily.rs  split_log.rs  split_log_daily.rs  split_log_date.rs  split_log_duration.rs  split_log_flush.rs  split_log_gz.rs  split_log_loop.rs  split_log_lz4.rs  split_log_mmap.rs  split_log_zip.rs  wait_log.rs  wait_log_finish.rs
src/: appender.rs  bencher.rs  config.rs  consts.rs  date.rs  error.rs  fast_log.rs  filter.rs  formats.rs  lib.rs  log.rs  runtime.rs  time_util.rs  wait.rs
src/example/: fast_log_test.rs  mod.rs
src/plugin/: cleaner.rs  console.rs  file.rs  file_daily.rs  file_loop.rs  file_mmap.rs  file_name.rs  file_rotate.rs  file_split.rs  keep.rs  mod.rs  packer.rs  roller.rs  rolling.rs
tests/: filter_test.rs  split_test.rs
