[workspace]
members = [
    ".",
    "example"
]

[package]
name = "fast_log"
version = "1.5.53"
description = "Rust async log High-performance asynchronous logging"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
repository = "https://github.com/rbatis/fast_log"
edition = "2021"
license = "MIT"
categories = ["logging"]
keywords = ["metrics", "async", "tracing"]

[features]
default = ["runtime_thread"]
gzip = ["flate2"]

runtime_thread = []

[dependencies]
fastdate = "0.1"
log = { version = "0.4", features = ["std"] }
crossbeam-utils = "0.8"
crossbeam = "0.8"
crossbeam-channel = "0.5"
once_cell = "1.9"
dark-std = "0.2"
parking_lot = "0.12"
zip = { version = "0.6", optional = true }
lz4 = { version = "1.23", optional = true }
flate2 = { version = "1.0", optional = true}