[package]
name = "example"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "custom_appender"
path = "src/custom_appender.rs"
[[bin]]
name = "split_log"
path = "src/split_log.rs"
[[bin]]
name = "split_log_zip"
path = "src/split_log_zip.rs"
[[bin]]
name = "split_log_lz4"
path = "src/split_log_lz4.rs"
[[bin]]
name = "split_log_gz"
path = "src/split_log_gz.rs"
[[bin]]
name = "wait_log"
path = "src/wait_log.rs"
[[bin]]
name = "bench_test"
path = "src/bench_test.rs"
[[bin]]
name = "split_log_flush"
path = "src/split_log_flush.rs"
[[bin]]
name = "split_log_loop"
path = "src/split_log_loop.rs"
[dependencies]

log = { version = "0.4", features = ["std"] }

crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
crossbeam = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cogo = "0.1"

# features=["lz4"] or add features=["zip","lz4"] if you need lz4 packer
fast_log = { path = "../", features = ["lz4","zip","gzip"]}
