[package]
name = "example"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "custom_appender"
path = "src/custom_appender.rs"
[[bin]]
name = "split_log"
path = "src/split_log.rs"
[[bin]]
name = "split_log_zip"
path = "src/split_log_zip.rs"
[[bin]]
name = "split_log_lz4"
path = "src/split_log_lz4.rs"
[[bin]]
name = "split_log_gz"
path = "src/split_log_gz.rs"
[[bin]]
name = "wait_log"
path = "src/wait_log.rs"
[[bin]]
name = "bench_test"
path = "src/bench_test.rs"
[[bin]]
name = "bench_test_file"
path = "src/bench_test_file.rs"
[[bin]]
name = "bench_test_file_split"
path = "src/bench_test_file_split.rs"
[[bin]]
name = "split_log_flush"
path = "src/split_log_flush.rs"
[[bin]]
name = "split_log_loop"
path = "src/split_log_loop.rs"
[[bin]]
name = "custom_appender_tokio"
path = "src/custom_appender_tokio.rs"
[[bin]]
name = "custom_appender_meilisearch"
path = "src/custom_appender_meilisearch.rs"
[[bin]]
name = "format_log"
path = "src/format_log.rs"
[[bin]]
name = "format_log_json"
path = "src/format_log_json.rs"
[dependencies]
log = { version = "0.4", features = ["std"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
crossbeam = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# features=["lz4"] or add features=["zip","lz4"] if you need lz4 packer
fast_log = { path = "../", features = ["lz4","zip","gzip"]}
tokio = {version="1",features = ["rt-multi-thread","macros"]}
meilisearch-sdk = "0.15.0"
serde = { version = "1.0", features = ["derive"] }